Fix bug #68641

Include more reflection information for spl_autoload_register